--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory( fc )
+#add_subdirectory( fc )
 add_subdirectory( builtins )
 add_subdirectory( softfloat )
 add_subdirectory( chainbase )
